# ot_gpio

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  arm-gcc-toolchain.cmake
src/apps/sh_cnt/: main.c  sh_cnt_btn.c  sh_cnt_btn.h  sh_cnt_conn.c  sh_cnt_conn.h  sh_cnt_display.c  sh_cnt_display.h  sh_cnt_led.c  sh_cnt_led.h  sh_cnt_loc_act.c  sh_cnt_loc_act.h  sh_cnt_mot.c  sh_cnt_mot.h  sh_cnt_pos.c  sh_cnt_pos.h  sh_cnt_rly.c  sh_cnt_rly.h  sh_cnt_temp.c  sh_cnt_temp.h
src/apps/sh_rmt/: main.c  sh_rmt_anim.c  sh_rmt_anim.h  sh_rmt_btn.c  sh_rmt_btn.h  sh_rmt_conn.c  sh_rmt_conn.h  sh_rmt_led.c  sh_rmt_led.h  sh_rmt_prg.c  sh_rmt_prg.h  sh_rmt_timer.c  sh_rmt_timer.h
src/apps/temp_tscrn/: ctrl.c  ctrl.h  display.c  display.h  main.c  output.c  output.h  temp_scrn.c  temp_scrn.h  temp_tscrn_data.c  temp_tscrn_data.h
src/lib/btn/: humi_btn.c  humi_btn.h
src/lib/conn/: humi_conn.c  humi_conn.h
src/lib/ft8xx/: ft8xx.c  ft8xx.h  ft8xx_copro.c  ft8xx_copro.h  ft8xx_dl.h  ft8xx_drv.c  ft8xx_drv.h  ft8xx_host_commands.h  ft8xx_memory.h
src/lib/led/: humi_led.c  humi_led.h
src/lib/lite_log/: lite_log.c  lite_log.h  log_data.h
src/lib/mcbor/: mcbor_const.h  mcbor_dec.c  mcbor_dec.h  mcbor_enc.c  mcbor_enc.h  mcbor_types.h
src/lib/ntc/: humi_ntc.c  humi_ntc.h
src/lib/pwr/: humi_pwr.c  humi_pwr.h
src/lib/rly/: humi_rly.c  humi_rly.h
src/lib/timer/: humi_timer.c  humi_timer.h
